Avoid card tooltips overflowing out of main window
See #40

--- a/Files/src/css/component/game-replay.component.scss
+++ b/Files/src/css/component/game-replay.component.scss
@@ -73,11 +73,14 @@
     }
 
     // Hack until https://github.com/wwayne/react-tooltip/issues/241 is fixed
+    .top .card-tooltip {
+        margin-top: 10px;
+    }
     .top .hand .card-tooltip {
-        margin-top: 40px;
+        margin-top: 65px;
     }
     .bottom .hand .card-tooltip {
-        margin-bottom: 40px;
+        margin-bottom: 65px;
     }
 
     .replay__controls {
